Partially fix unreadable text in SubInfo entries in dark themes

--- a/src/gui/detailed_default.css
+++ b/src/gui/detailed_default.css
@@ -15,6 +15,7 @@ td {
 
 .subinfo {
 	background-color: #ddeedd;
+	color: black;
 	width: 100%;
 }
 
